  * Added analysis.polymer, currently with PersistenceLength tool (Issue #460)
  * Added analysis.rdf, with InterRDF tool. (Issue #460)

Changes

  * built html doc files are no longer version controlled (Issue #491)
  * The lib._distances and lib_distances_openmp libraries now have a
    OPENMP_ENABLED boolean flag which indicates if openmp was used in
    compilation.  (Issue #530)

Fixes

  * AMBER netcdf writer now correctly uses float32 precision (Issue #518)
  * Fixed a numpy incompatibility in `analysis.leaflet.LeafletFinder`.
    (Issue #533)
  * Cleaned up `MDAnalysis.Writer` docs regarding `dt` usage. (Issue #522)
  * Fixed setup-time dependency on numpy that broke pip installs. (Issue #479)
  * Fixed unpickling errors due to lingering dead universes. (Issue #487)
  * Fixed analysis.density modules requiring the defunct `skip` attribute
    on trajectories. (Issue #489)
  * ten2eleven camelcase fixer now deals with centerOfMass (Issue #470)
  * ten2eleven will now convert numatoms to n_atoms argument
    for writer() functions (Issue #470)
  * Fixed non-compliant Amber NCDFWriter (Issue #488)
  * Fixed many Timestep methods failing when positions weren't present
    (Issue #512)
  * Fixed PointSelection using KDTree (Issue #362)
  * Fixed GROParser getting tripped up by some file (Issue #548)
  * Fixed writing dx files from analysis.density.density_from_Universe()
    (Issue #544 and #410)

10/08/15

  * 0.12.1 kain88-de, orbeckst, richardjgowers

API Changes

Enhancements

Changes

Fixes
  * Fixed OpenMP detection on Linux/OSX #459
  * Fixed reading of LAMMPS trajectory times: default unit ought
    to be fs and not ps
  * Fixed setting of dt for DCDReader (and LAMMPS DCDReader) with
    keyword argument Universe(..., dt=<dt>)
  * Fixed a bug in topology.core.guess_atom_element where a
    single digit atom name would raise an IndexError (#476)
  * Fixed numpy -> np in LeafletFinder

10/04/15 kain88-de, richardjgowers, dotsdl, sseyler, orbeckst, jbarnoud